--- a/index.html
+++ b/index.html
@@ -98,8 +98,6 @@
 				<ul>
 					<li class="fragment custom blur highlight-current-white fade-up">Memory region for storing data in computer's
 						memory.</li>
-					<li class="fragment custom blur highlight-current-white fade-up">Region
-						of memory that stores dynamically allocated memory.</li>
 					<li class="fragment custom blur highlight-current-white fade-up">It is used
 						for storing objects, arrays, and other data structures that are created at runtime.</li>
 					<li class="fragment custom blur highlight-current-white fade-up">Dynamic-size memory region that grows and
@@ -135,7 +133,7 @@
 						<tr class="fragment custom blur highlight-current-white fade-up">
 							<td><strong>Allocation</strong></td>
 							<td>Automatic (push/pop)</td>
-							<td>Manual or via Garbage Collector</td>
+							<td>Automatic via Garbage Collector</td>
 						</tr>
 					</tbody>
 				</table>
@@ -299,7 +297,7 @@ console.log(window.globalVar) // Implicitly global check
 			<section data-transition="zoom" data-transition-speed="slow">
 				<h2>Global Variables: mitigation</h2>
 				<pre>
-					<code class="language-javascript" data-trim data-line-numbers="|1,3|4|2|6">
+					<code class="language-javascript" data-trim data-line-numbers="|2|6">
 function createGlobalVar() {
 	let globalVar = "I'm a global variable"; // or const, or even var
 }
@@ -355,7 +353,7 @@ console.log("detachedNode after setting to null: ", detachedNode);
 			<section data-transition="zoom" data-transition-speed="slow">
 				<h2>Closures: leak</h2>
 				<pre>
-					<code class="language-javascript" data-trim data-line-numbers="|1,6|7|2|3-5">
+					<code class="language-javascript" data-trim data-line-numbers="|1,6|7|8|2|3-5">
 function outerFunction() {
 	let largeArray = new Array(1000000).fill('memory leak');
 	return function innerFunction() {
@@ -363,6 +361,7 @@ function outerFunction() {
 	};
 }
 const leak = outerFunction(); // `largeArray` is retained in memory.
+leak();
 </code>
 				</pre>
 			</section>
@@ -381,6 +380,7 @@ function outerFunction() {
 	};
 }
 const leak = outerFunction();
+leak();
 </code>
 				</pre>
 			</section>
@@ -459,9 +459,9 @@ interval();
 				<h2>Several tools</h2>
 				<ul>
 					<li class="fragment custom blur highlight-current-white fade-up">Heap Snapshots</li>
+					<li class="fragment custom blur highlight-current-white fade-up">Detached DOM Nodes</li>
 					<li class="fragment custom blur highlight-current-white fade-up">Allocation Timeline/Profiler</li>
 					<li class="fragment custom blur highlight-current-white fade-up">Performance Tab</li>
-					<li class="fragment custom blur highlight-current-white fade-up">Detached DOM Nodes</li>
 				</ul>
 			</section>
 			<section data-transition="zoom" data-transition-speed="slow">
