docs: last adjustment before talk

--- a/index.html
+++ b/index.html
@@ -622,13 +622,13 @@ let weakSet = new WeakSet();
 						</tr>
 						<tr class="fragment custom blur highlight-current-white fade-up">
 							<td><strong>Keys must be objects</strong></td>
-							<td>Yes</td>
 							<td>No</td>
+							<td>Yes</td>
 						</tr>
 						<tr class="fragment custom blur highlight-current-white fade-up">
 							<td><strong>Use cases</strong></td>
 							<td>Data manipulation</td>
-							<td>Caching, metadata</td>.
+							<td>Caching, metadata</td>
 						</tr>
 					</tbody>
 				</table>
