docs: minor improvement event listeners mitigation presentation from talk

--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ document.getElementById('button').addEventListener('click', function() {
 				<section data-transition="zoom" data-transition-speed="slow">
 					<h2>Event Listeners: mitigation</h2>
 					<pre>
-						<code class="language-javascript" data-trim data-line-numbers="|1|2|3-5|7|8-10">
+						<code class="language-javascript" data-trim data-line-numbers="|7|8-10">
 // Mitigation
 const button = document.getElementById('button');
 button.addEventListener('click', function() {
